# director_anymal_b_simple

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/anymal/: anymal_fp.mat  director_config.json  model.urdf
config/anymal_sim/: robot.pmd
launch/: anymal_core.launch  anymal_sim.launch
scripts/: clone_deps.sh
src/director_anymal_b_simple/: anymaldriverpanel.py  anymalplanner.py  runstartup.py  startup.py
src/director_anymal_b_simple/ui/: ddAnymalDriverPanel.ui
src/director_anymal_b_simple/working/: anymaldriverpanel.py  anymalplanner.py
