<?xml version="1.0"?>
<package>
  <name>director_anymal_b_simple</name>
  <version>0.0.0</version>
  <description>The director_anymal_b_simple package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mfallon@todo.todo">mfallon</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>director</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>director</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
