<?xml version="1.0"?>
<package>
  <name>director_anymal_b_simple</name>
  <version>0.0.0</version>
  <description>The director_anymal_b_simple package</description>

  <maintainer email="mfallon@robots.ox.ac.uk">mfallon</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>director</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>director</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
